@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  19 Dec 2015; Marius Brehler <marbre@linux.sungazer.de>
+  -arrayfire-python-3.0.20150914.ebuild:
+  dev-python/arrayfire-python: Drop old
+
 *arrayfire-python-3.1.20151111 (12 Nov 2015)
 
   12 Nov 2015; Marius Brehler <marbre@linux.sungazer.de>
